syntax = "proto3";

// Package inventory.v1 содержит API для работы с платежами
package inventory.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Lempi-sudo/lempi-rocket-project/shared/pkg/proto/inventory/v1;inventory_v1";

service InventoryService {
    rpc GetPart(GetPartRequest) returns (GetPartResponse); 
    rpc ListParts(ListPartsRequest) returns (ListPartsResponse); 
}
// Запрос на получение детали по UUID
message GetPartRequest {
    string uuid = 1;
}

// Ответ с деталью
message GetPartResponse {
    Part part = 1;
}

// Запрос на получение списка деталей с фильтром
message ListPartsRequest {
    PartsFilter filter = 1;
}

// Ответ со списком деталей
message ListPartsResponse {
    repeated Part parts = 1;
}

// Виды деталей
enum Category{
    // Неизвестный способ оплаты
    UNKNOWN_UNSPECIFIED = 0;
    // Двигатель
    ENGINE = 1;	
    // Топливо
    FUEL = 2;
    // Иллюминатор
    PORTHOLE	= 3;
    // Крыло
    WING	 = 4;	
    
}

// Фильтр для поиска деталей
message PartsFilter {
    repeated string uuids = 1;
    repeated string names = 2;
    repeated Category categories = 3;
    repeated string manufacturer_countries = 4;
    repeated string tags = 5;
}


// Описание детали
message Part {
    string uuid = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int64 stock_quantity = 5;
    Category category = 6;
    Dimensions dimensions = 7;
    Manufacturer manufacturer = 8;
    repeated string tags = 9;
    map<string, Value> metadata = 10;
    google.protobuf.Timestamp created_at = 11;
    google.protobuf.Timestamp updated_at = 12;
}

// Размеры детали
message Dimensions {
    double length = 1;
    double width = 2;
    double height = 3;
    double weight = 4;
}

// Производитель детали
message Manufacturer {
    string name = 1;
    string country = 2;
    string website = 3;
}

// Универсальное значение для метаданных
message Value {
    oneof kind {
        string string_value = 1;
        int64 int64_value = 2;
        double double_value = 3;
        bool bool_value = 4;
    }
}